--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Synth Room</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
