--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,14 +2,97 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="screen-orientation" content="landscape" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
     <title>The Synth Room</title>
+    <style>
+      /* Rotation prompt for portrait mode */
+      #rotation-prompt {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        z-index: 99999;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        text-align: center;
+        padding: 20px;
+      }
+
+      #rotation-prompt .rotate-icon {
+        width: 80px;
+        height: 80px;
+        border: 4px solid white;
+        border-radius: 10px;
+        margin-bottom: 30px;
+        position: relative;
+        animation: rotate-phone 2s ease-in-out infinite;
+      }
+
+      #rotation-prompt .rotate-icon::before {
+        content: '📱';
+        font-size: 50px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      @keyframes rotate-phone {
+        0%, 100% { transform: rotate(0deg); }
+        50% { transform: rotate(90deg); }
+      }
+
+      #rotation-prompt h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        font-weight: bold;
+      }
+
+      #rotation-prompt p {
+        font-size: 16px;
+        opacity: 0.9;
+      }
+
+      /* Show rotation prompt in portrait mode */
+      @media screen and (orientation: portrait) {
+        #rotation-prompt {
+          display: flex;
+        }
+        #app {
+          display: none;
+        }
+      }
+
+      /* Ensure landscape orientation on supported devices */
+      @media screen and (orientation: landscape) {
+        #rotation-prompt {
+          display: none;
+        }
+        #app {
+          display: block;
+        }
+      }
+
+      /* Prevent zooming on iOS */
+      touch-action: pan-x pan-y;
+    </style>
   </head>
   <body>
+    <div id="rotation-prompt">
+      <div class="rotate-icon"></div>
+      <h2>Rotate Your Device</h2>
+      <p>For the best experience, please use landscape mode</p>
+    </div>
     <div id="app" class="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
